[tool.poetry]
name = "my-super-cool-project"
version = "0.1.0"
description = ""
authors = ["Lorcan Rae <77328552+lorcanrae@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
